create github pages

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Builder</a></section><section class="mbr-section" id="msg-box5-a" style="background-color: rgb(231, 231, 231); padding-top: 0px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section" id="msg-box5-a" style="background-color: rgb(231, 231, 231); padding-top: 0px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -79,7 +79,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background" id="header1-j" style="background-image: url(assets/images/naturemeetssciencevitexon-2000x1167.png);">
+<section class="mbr-section mbr-section-hero mbr-section-full" id="header1-j" style="background-image: url(assets/images/naturemeetssciencevitexon-2000x1167.png);">
 
     <div class="mbr-overlay" style="opacity: 0.1; background-color: rgb(0, 0, 0);"></div>
 
@@ -188,7 +188,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="S4sMwFnWbtzyrdvXVnRMkhQml32RmH2AQkVhz2MbwQClYX3oq/gqYPNXcbE40KsXTG5oLZMUAuitOQe+loi0w5EwicXEb/xo+nwflIXLGupzZ0oji7J4AmREqYtpudNw" data-form-email="true">
+                        <input type="hidden" value="51iKNIQJr3XKohg7oM802zH9dhfg4inWaxs6aVV16Wi5PykDU4/5F02lJwf8PFdLRAZOH9UYXeX1Q/1GbncWEIm1IlVgC0VIB2o3p7ps2ZLm+pEcWEWjxTo3717/qO6N" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -257,7 +257,6 @@ email: info@vitexon.com<br><br></p>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
-  <script src="assets/jarallax/jarallax.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
   
