--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section" id="msg-box5-a" style="background-color: rgb(231, 231, 231); padding-top: 0px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Generator</a></section><section class="mbr-section" id="msg-box5-a" style="background-color: rgb(231, 231, 231); padding-top: 0px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -79,7 +79,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section-hero mbr-section-full" id="header1-j" style="background-image: url(assets/images/naturemeetssciencevitexon-2000x1167.png);">
+<section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background" id="header1-j" style="background-image: url(assets/images/naturemeetssciencevitexon-2000x1167.png);">
 
     <div class="mbr-overlay" style="opacity: 0.1; background-color: rgb(0, 0, 0);"></div>
 
@@ -188,7 +188,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="Qfj++dxMY8orA7Dn+R0nu6w8vhvTq+c/JzE8XSFqOzACSkQJNDe5UI6rkcxr0YMfmeXxaNTgcpbpC62O+SrFV8MfjXbHheTF4VZS8ezLBE8pMsJv7bRVQ/Mt7ABe7YR+" data-form-email="true">
+                        <input type="hidden" value="FOn7xrwqf2piffXqTvMyKVINOkswv/veYNc5pDEWnEYPc+/1g+aMFKxEcywmXN8DkRJa7NmwJ340TW0uPQDmf1QYNdyc/LbXsvr5UV8FBPaRB5Qph0avKcEeUS6Wohxq" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -257,6 +257,7 @@ email: info@vitexon.com<br><br></p>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
+  <script src="assets/jarallax/jarallax.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid/formoid.min.js"></script>
   
