--- a/SynergyBurn.html
+++ b/SynergyBurn.html
@@ -46,7 +46,7 @@ email: info@vitexon.com<br><br></p>
 </section>
 
 
-  <section class="engine"><a rel="external" href="https://mobirise.com">Web Site Maker</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Generator</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
