--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Generator</a></section><section class="mbr-section" id="msg-box5-a" style="background-color: rgb(231, 231, 231); padding-top: 0px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section" id="msg-box5-a" style="background-color: rgb(231, 231, 231); padding-top: 0px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -79,7 +79,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background" id="header1-j" style="background-image: url(assets/images/naturemeetssciencevitexon-2000x1167.png);">
+<section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background" id="header1-j" style="background-image: url(assets/images/naturemeetssciencevitexonsmall-2000x1166.png);">
 
     <div class="mbr-overlay" style="opacity: 0.1; background-color: rgb(0, 0, 0);"></div>
 
@@ -188,7 +188,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="FOn7xrwqf2piffXqTvMyKVINOkswv/veYNc5pDEWnEYPc+/1g+aMFKxEcywmXN8DkRJa7NmwJ340TW0uPQDmf1QYNdyc/LbXsvr5UV8FBPaRB5Qph0avKcEeUS6Wohxq" data-form-email="true">
+                        <input type="hidden" value="Cc/sSbpaewrYcM8mddsUeZq1Mfr2UeHjqBLcrU86zoOA7TpV6xXB5cmd6B/UVtmyVZo6nvTqUwnlfhYb53vY+SL6htWzdbwM7wncyuwnK0sx28CglJ08DFWglWMo+WEb" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
