--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section" id="msg-box5-a" style="background-color: rgb(231, 231, 231); padding-top: 0px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section" id="msg-box5-a" style="background-color: rgb(231, 231, 231); padding-top: 0px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -154,7 +154,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="t/I0PlvRQNQblYSqlmbehZXPExZJjGqsPQPTQo4l2KkyjQb/GCQ2dM6MkpVlqw0wk0alDLYDPl/c3cJ3/CdlGk7eqwwpQwxU4kjhTgL1fk/ihoYNC6i+jXarff2kB96F" data-form-email="true">
+                        <input type="hidden" value="NwCg9Wc93oKD+DFY4tsIZ3CkbBeeZ3iNQINvr0bWaQbhCr8NkUMN+QvCJi/lpvgxCGFOr6nFHneIwCZJT/RoQV6tvwrevYEO/sSrVPoaYaE+dg54GedcLlQwWXXwtO/H" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -216,6 +216,13 @@ email: info@vitexon.com<br><br></p>
         </div>
     </div>
 </section>
+
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-q" style="background-color: rgb(50, 50, 50); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+    
+    <div class="container">
+        <p class="text-xs-center">Copyright (c) 2016 Vitexon.</p>
+    </div>
+</footer>
 
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
