--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section" id="msg-box5-a" style="background-color: rgb(231, 231, 231); padding-top: 0px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Maker</a></section><section class="mbr-section" id="msg-box5-a" style="background-color: rgb(231, 231, 231); padding-top: 0px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -106,7 +106,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
               <div class="card cart-block">
-                  <div class="card-img"><a href="SynergyBurn" target="_blank"><img src="assets/images/sb-600x436.png" class="card-img-top"></a></div>
+                  <div class="card-img"><img src="assets/images/sb-600x436.png" class="card-img-top"></div>
                   
                 </div>
             </div>
@@ -165,7 +165,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="Qh2w5woAVr7jifrY3HDhy5XrU+trFHM1vNDud9s45C+k8xdw70rwXzniM+GOUMB+bO5pZ4DrWm0NrnAnxNrpDbBgZuuVyw9nzATzR5zdmuKGca2/+KstaQBA0yYQ6Pxk" data-form-email="true">
+                        <input type="hidden" value="cIayGAg4BubUNx4MdOIG2/NJ7PCp2uAD04uSjV0s7ar9wE09fzsvuyEfRIauJu1eHLNXQpmhq6+xGgNWyJj4pCtE90m+mqcnzSp+5cEv5OhIb6K6uwXetv9eZGqFkuXV" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
