--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section" id="msg-box5-a" style="background-color: rgb(231, 231, 231); padding-top: 0px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Site Generator</a></section><section class="mbr-section" id="msg-box5-a" style="background-color: rgb(231, 231, 231); padding-top: 0px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -86,7 +86,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="content5-n" style="background-image: url(assets/images/naturemeets-science-2000x1167.png); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section mbr-parallax-background" id="content5-n" style="background-image: url(assets/images/naturemeets-sciencesmall-2000x1167.png); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.1; background-color: rgb(0, 0, 0);">
     </div>
@@ -172,7 +172,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="sufhogkWIJ9O6MdIFMDT10q0t2Hn5V7+JnymxilHd7zLqAFisZsqx6J9QF4wcpi2/Twh5uo9X/Y4jpJLLSCrd9K0qGsEbr7G5/GkWyywIzOXnUsDuDr/O2bXo8H/uOJw" data-form-email="true">
+                        <input type="hidden" value="BiZ5+xFPQI0oynDjd0sUvso36c7U2nQXaLrulQ7vv1uYBbgMD1e6jTP4C6+VHuD8QXulxlDhNdrsd1WnzetWcgcQpVYjQYblHs6jJg5v2nnCCBFR6fcxIyyETP8SgnbL" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
