--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Site Generator</a></section><section class="mbr-section" id="msg-box5-a" style="background-color: rgb(231, 231, 231); padding-top: 0px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section" id="msg-box5-a" style="background-color: rgb(231, 231, 231); padding-top: 0px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -43,7 +43,7 @@
             <div class="mbr-table-md-up">
 
               <div class="mbr-table-cell mbr-right-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 20%;">
-                  <div class="mbr-figure"><img src="assets/images/vitexonweblogosmall-1400x659.jpg"></div>
+                  <div class="mbr-figure"><img src="assets/images/vitexonweblogosmall-1400x659.png"></div>
               </div>
 
               
@@ -172,7 +172,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="BiZ5+xFPQI0oynDjd0sUvso36c7U2nQXaLrulQ7vv1uYBbgMD1e6jTP4C6+VHuD8QXulxlDhNdrsd1WnzetWcgcQpVYjQYblHs6jJg5v2nnCCBFR6fcxIyyETP8SgnbL" data-form-email="true">
+                        <input type="hidden" value="iA4Lj7J2qFsdXSkv/1Llt2nmVQKAXsA11cLsnv27MyyqUEulXE7N1k4Mnjpfuocl5x/kfLHI5hqXmHEdhHZO8A9M42ts/lCgizArYwHwuDb0gx433q/2LGm2iKuTuGg6" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -218,7 +218,7 @@
     <div class="container">
         <div class="row">
             <div class="mbr-footer-content col-xs-12 col-md-3">
-                <div><img src="assets/images/vitexonweblogosmall-128x60.jpg"></div>
+                <div><img src="assets/images/vitexonweblogosmall-1-128x60.png"></div>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
                 <p><strong>Address</strong><br>Vitexon Limited<br>Office 51 <br>14 Belvoir Street<br>Leicester<br>LE1 6AP<br></p>
