--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/k">free bootstrap templates</a></section><section class="mbr-section mbr-section__container article" id="header3-r" data-rv-view="4" style="background-color: rgb(231, 231, 231); padding-top: 40px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/l">bootstrap themes</a></section><section class="mbr-section mbr-section__container article" id="header3-r" data-rv-view="4" style="background-color: rgb(231, 231, 231); padding-top: 40px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -50,7 +50,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p>With over 25 years experience in the sports nutrition and pharmaceutical industries, we truly are specialists in our field.&nbsp;</p><p>Our policy is to only sell supplements that we use ourselves or give to our families. This commitment and our passion about natural health, drives us to deliver some of the best products available in todays market.</p></div>
+            <div class="col-xs-12 lead"><p>At Vitexon We're passionate about health and with over 25 years experience in the sports nutrition and pharmaceutical industries, we truly understand our field. W<span style="font-size: 1.07rem;">e have come to the conclusion that nature provides us with the best food and medicine, join us on our journey returning to nature.</span></p><p><span style="font-size: 1.07rem;"><br></span></p><p>Our policy is to only sell items we use ourselves or give to our families. This commitment and our passion about natural health, drives us to deliver some of the best products available in todays market.</p></div>
         </div>
     </div>
 
@@ -68,7 +68,7 @@
 
                     
                     
-                    <div class="mbr-section-btn"><a class="btn btn-lg btn-success" href="https://mobirise.com">DOWNLOAD FOR WINDOWS</a>  <a class="btn btn-lg btn-warning" href="https://mobirise.com">DOWNLOAD FOR MAC</a></div>
+                    <div class="mbr-section-btn"><a class="btn btn-lg btn-success" href="https://mobirise.com">eBay</a>  </div>
                 </div>
             </div>
         </div>
@@ -152,7 +152,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="dBo7ebegei7WEycsIRapwW8X0mdg43cwpjX/hZpLHSQQLsWkrX6UNJXasPBzWX2ji4P5aQneWPrSSxkXyAmKhevrmMuoyG5AISQiFCT10wTSQPk6WWMEjaO63nELqusL" data-form-email="true">
+                        <input type="hidden" value="gtHP3gV/y2bUg3twa6TNr7CfmCZFDMbepoV+4JBBstYpu/cTeyxkDPRk/HvsH8OWUsg1DKIQa2q6fL1MmB8Mfq3FGpw+/eeV0qY5ZAg4UsJj/XoVFz1IfQXqYWF8c10p" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
