--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/l">bootstrap themes</a></section><section class="mbr-section mbr-section__container article" id="header3-r" data-rv-view="4" style="background-color: rgb(231, 231, 231); padding-top: 40px; padding-bottom: 20px;">
+<section class="engine"><a href="https://mobirise.co/j">design your own website</a></section><section class="mbr-section mbr-section__container article" id="header3-r" data-rv-view="4" style="background-color: rgb(231, 231, 231); padding-top: 40px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -50,7 +50,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p>At Vitexon We're passionate about health and with over 25 years experience in the sports nutrition and pharmaceutical industries, we truly understand our field. W<span style="font-size: 1.07rem;">e have come to the conclusion that nature provides us with the best food and medicine, join us on our journey returning to nature.</span></p><p><span style="font-size: 1.07rem;"><br></span></p><p>Our policy is to only sell items we use ourselves or give to our families. This commitment and our passion about natural health, drives us to deliver some of the best products available in todays market.</p></div>
+            <div class="col-xs-12 lead"><p>At Vitexon We're passionate about health and with over 25 years experience in the sports nutrition and pharmaceutical industries, we truly understand our field.</p><p><br></p><p>We try to provide access to some of the gems of the earth, from Turmeric to Hemp protein, we are constantly improving our range.</p><p><br></p><p>Click some of the links below to see our products or to learn more about us and our message.</p></div>
         </div>
     </div>
 
@@ -152,7 +152,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="gtHP3gV/y2bUg3twa6TNr7CfmCZFDMbepoV+4JBBstYpu/cTeyxkDPRk/HvsH8OWUsg1DKIQa2q6fL1MmB8Mfq3FGpw+/eeV0qY5ZAg4UsJj/XoVFz1IfQXqYWF8c10p" data-form-email="true">
+                        <input type="hidden" value="7ams2YEypcc62koQAzZefM6FxKVV/vnltowxIlGu+0oBa3KyNMBQ2BLe1T27dyLG7S+YZEp+kiRFJD4yMgp08Nx6jGtRXR/ogONRTmBzaWrfvwUe5SEKZPuZf93/+Nxx" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
