--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
                 <p><strong>Contacts</strong><br>
-email: info@vitexon.com<br><br></p>
+email: info@vitexon.com<br>Tel: +44 7445 999 507<br><br></p>
             </div>
             <div class="mbr-footer-content col-xs-12 col-md-3">
                 <p><br><br><br></p>
