--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         <div class="row">
             <div class="col-xs-12 lead"><p>At Vitexon We're passionate about health and with over 25 years experience in the sports nutrition and pharmaceutical industries, we truly understand our field.
 </p><p>
-</p><p><span style="font-size: 1.07rem;">We provide access to some of the gems of the earth, from Turmeric to Hemp protein, we're constantly improving our range.&nbsp;</span></p><p>
-</p><p><span style="font-size: 1.07rem;">Click some of the links below to see our products or to learn more about us and our message.</span></p></div>
+</p><p><span style="font-size: 1.07rem;">Click on some of the links below to find out more about us and what we sell.&nbsp;</span></p><p>
+</p><p><span style="font-size: 1.07rem;">Click on some of the links below to find out more about us and what we sell.</span></p></div>
         </div>
     </div>
 
