--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="col-xs-12 lead"><p>At Vitexon We're passionate about health and with over 25 years experience in the sports nutrition and pharmaceutical industries, we truly understand our field.
 </p><p>
 </p><p><span style="font-size: 1.07rem;">Click on some of the links below to find out more about us and what we sell.&nbsp;</span></p><p>
-</p><p><span style="font-size: 1.07rem;">Click on some of the links below to find out more about us and what we sell.</span></p></div>
+
         </div>
     </div>
 
@@ -75,7 +75,7 @@
 
 
               <div class="mbr-table-cell col-md-5 text-xs-center text-md-left content-size">
-                  <h3 class="mbr-section-title display-2">Check the links below to learn more about us:</h3>
+                  <h3 class="mbr-section-title display-2">Click on the links below to learn more about us:</h3>
                   <div class="lead">
 
                     <p>.</p>
